--- a/style.css
+++ b/style.css
@@ -8,6 +8,18 @@ section{
     height: 100vh;
     background-color: #000;
 }
+section:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right,#f00,#f00,#0f0,#0ff,#ff0,#0ff);
+    mix-blend-mode: color-dodge;
+    pointer-events: none;
+}
+
 vedio{
     object-fit: cover;
 }
